--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -194,6 +194,17 @@ Often connected to the Middle Korean bound noun {{m|okm|이|tr=i|t=person}}.
 * {{desc|okm|이|tr=-i|pos=nominative case marker}}
 ** {{desc|ko|이|tr=-i|pos=nominative case marker}}
 
+===Etymology 4===
+
+====Adjective====
+{{head|oko|adjective|tr=*i-}}
+
+# to [[be]]
+
+=====Descendants=====
+* {{desc|okm|-이다〮|tr=-ì-tá}}
+** {{desc|ko|-이다}}
+
 ----
 
 ==Vietnamese==
