Æ /* Noun */ #: {{ja-usex|'''はや'''[[数日]]|'''はや'''-すうじつ}} <早#63756729>

--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -115,6 +115,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 {{ja-noun|はや}}
 
 # already, now
+#: {{ja-usex|'''はや'''[[数日]]|'''はや'''-すうじつ}}
 
 ===References===
 <references/>
