/* Definitions */ ; [[col]]  seems reasonable- cf. [[North Col]] <坳#63762920>

--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -28,7 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[flat]] [[land]] between [[mountain]]s
+# [[flat]] [[land]] between [[mountain]]s; [[col]]
 # a [[hollow]] in the [[ground]]; a [[cavity]]; [[depression]]
 
 ====Usage notes====
