--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -167,6 +167,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Akan: {{tt|ak|twene}}
 * Albanian: {{tt+|sq|urë|f}}
 * Amharic: {{tt|am|ድልድይ}}
+* Andi: {{t|ani|кьир}}
 * Arabic: {{tt|ar|جِسْر|m}}, {{tt|ar|قَنْطَرَة|f}}
 *: Egyptian Arabic: {{tt|arz|كوبري|m|tr=kōbrī}}
 *: Hijazi Arabic: {{tt|acw|جسر|m|tr=jisir}}
