--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -354,9 +354,9 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # {{lb|en|obsolete|poetic}} Loss or violence suffered.
 #* {{RQ:Shakespeare Henry 6-2|II|iii|passage=Two '''pulls''' at once; / His lady banished, and a limb lopped off.}}
 # {{lb|en|colloquial}} The act of drinking; a [[mouthful]] or [[swig]] of a drink.
+#*{{quote-book|en|1882|H. Elliott McBride|Well Fixed for a Rainy Day|passage=Heah , Sam Johnsing , jis' take a '''pull''' at dis bottle, an' it will make yo' feel better .}}
 #* {{quote-book|en|year=1996|author=Jon Byrell|title=Lairs, Urgers and Coat-Tuggers| publisher=Ironbark| location=Sydney| page=294| passage=Sutho took a '''pull''' at his Johnny Walker and Coke and laughed that trademark laugh of his and said: `Okay. I'll pay that all right.'}}
 #: {{ux|en|to take a pull at a mug of beer}}
-#: {{rfquotek|en|Charles Dickens}}
 # {{lb|en|cricket}} A type of stroke by which a leg ball is sent to the off side, or an off ball to the on side; a [[pull shot]].
 #* '''1887''', {{w|R. A. Proctor}}, ''Longman's Magazine''
 #*: The '''pull''' is not a legitimate stroke, but bad cricket.
