--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -434,3 +434,6 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 [[Category:en:Dances]]
 [[Category:en:Liquids]]
 [[Category:en:Units of measure]]
+
+=Faroese=
+* [[fleet]] , [[navy]]
