--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -435,5 +435,11 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 [[Category:en:Liquids]]
 [[Category:en:Units of measure]]
 
+----
+
 ==Faroese==
-* [[fleet]] , [[navy]]
+
+===Noun===
+{{fy-noun}}
+
+# [[fleet]], [[navy]]
