t+rom:[[śukar]] ([[WT:EDIT|Assisted]]) <beautiful#63837956>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -189,6 +189,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t+|pt|bonita|f}}, {{t+|pt|lindo|m}}, {{t+|pt|linda|f}}
 * Punjabi: {{t+|pa|ਸੁਹਣਾ}}
 * Quechua: {{t+|qu|sumaq}}, {{t|qu|şumag}}, {{t|qu|k'acha}}
+* Romani: {{t|rom|śukar}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t+|ro|frumoasă|f}}
 * Romansch: {{t|rm|bel|m}}, {{t|rm|bella|f}}, {{t|rm|bi|m}}, {{t|rm|biala|f}}
 * Russian: {{t+|ru|краси́вый}}, {{t+|ru|прекра́сный}}, {{t+|ru|приго́жий}} {{qualifier|folklore, poetic}}, {{t+|ru|ле́пый}} {{qualifier|archaic}}
