--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -133,7 +133,7 @@ From {{inh|ja|ojp|sort=ほし|-}}.
 
 # a [[star]] {{gl|[[luminous]] [[celestial body]]}}
 #: {{syn|ja|恒星|tr=kōsei}}
-# a star {{gl|[[concave]] [[polygon]] with [[regular]], [[pointy]] [[protrusion]]s and [[indentation]]s, ''espeically'' used as a [[symbol]] to [[rate]] [[quality]]}}
+# a star {{gl|[[concave]] [[polygon]] with [[regular]], [[pointy]] [[protrusion]]s and [[indentation]]s, ''especially'' used as a [[symbol]] to [[rate]] [[quality]]}}
 # {{lb|ja|sort=ほし|tarot}} the [[star|Star]]
 # {{lb|ja|loosely}} a [[celestial body]]
 #: {{syn|ja|天体|tr=tentai}}
