t+tet:[[ko'alia]] ([[WT:EDIT|Assisted]]) <speak#63879557>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -291,6 +291,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Tamil: {{t+|ta|பேசு|sc=Taml}}
 * Tatar: {{t+|tt|сөйләргә|sc=Cyrl}}, {{t+|tt|әйтергә|sc=Cyrl}}, {{t+|tt|сөйләшергә|sc=Cyrl}}
 * Telugu: {{t+|te|మాట్లాడు|sc=Telu}}
+* Tetum: {{t|tet|ko'alia}}
 * Thai: {{t+|th|พูด}}, {{t+|th|กล่าว}}
 * Tibetan: {{t|bo|སྐད་ཆ་བཤད|sc=Tibt}}
 * Tocharian B: {{t|txb|we-}}
