t+tet:[[muta]] ([[WT:EDIT|Assisted]]) <vomit#63884742>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -148,6 +148,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Tagalog: {{t|tl|sumuka}}
 * Tajik: {{t|tg|қай кардан}}
 * Tamil: {{t+|ta|குமட்டு}}, {{t+|ta|உவட்டு}}, {{t|ta|உவாந்தி}}, {{t+|ta|வாந்தி}}
+* Tetum: {{t|tet|muta}}
 * Thai: {{t+|th|อาเจียน}}, {{t+|th|อ้วก}}
 * Tibetan: {{t|bo|སྐྱུག་པ་ཤོར}}
 * Turkish: {{t+|tr|kusmak}}, {{t+|tr|istifra etmek}}
