--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -274,6 +274,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Sylheti: {{t|syl|ꠇꠣꠐꠣ}}
 * Tagalog: {{t|tl|hiwa}}
 * Tatar: {{t|tt|кисү}}
+* Tetum: {{t|tet|tesi}}
 * Thai: {{t+|th|ตัด}}
 * Tigrinya: {{t|ti|ቁረጽ}}
 * Tofa: {{t|kim|кеъсер|tr=ke"ser}}
