Why do we have this weird spelling here? <choose#63890714>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -40,7 +40,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 
 =====Related terms=====
 * {{l|en|choice}}
-* {{l|en|choosey}}
+* {{l|en|choosy}}
 * {{l|en|chosen}}
 
 =====Translations=====
