/* Translations */ One more Portuguese synonym <catch#63896117>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -378,7 +378,7 @@ See combined section below.
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Norwegian: {{t+|no|fange}}
 * Polish: {{t+|pl|łapać|impf}}, {{t+|pl|złapać|pf}}, {{t+|pl|schwytać|pf}}
-* Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
+* Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}, {{t|pt|pilhar}}
 * Quechua: {{t|qu|jap'iy}}
 * Romanian: {{t+|ro|prinde}}
 * Romansch: {{t|rm|tschiffar}}
