t+tet:[[rai-tarutu]] ([[WT:EDIT|Assisted]]) <thunder#63900154>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -213,6 +213,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Tamil: {{t+|ta|இடி}}
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
 * Telugu: {{t+|te|ఉరుము}}
+* Tetum: {{t|tet|rai-tarutu}}
 * Thai: {{t+|th|ฟ้าร้อง}}
 * Tibetan: {{t|bo|ལྡིར་སྒྲ}}
 * Turkish: {{t+|tr|gök gürültüsü}}, {{t+|tr|yıldırım}}
