--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -154,6 +154,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Macedonian: {{t|mk|турка|impf}}, {{t|mk|бутка|impf}}
 * Malay: {{t+|ms|tolak}}
 * Maori: {{t|mi|kōpana}}
+* Mingrelian: {{t|xmf|ჯიკაფი}}
 * Mongolian: {{t+|mn|түлхэх}}
 * Neapolitan: {{t|nap|vottà}}
 * Norwegian: {{t|no|dytte}}, {{t|no|skubbe}}
