--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -201,7 +201,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Czech: {{t+|cs|pohánět}}
 * Danish: {{t|da|hetse}}
 * Esperanto: {{t|eo|peli}}
-* Finnish: {{t+|fi|painostaa}}, {{t+|fi|vaatia}}, {{t+|fi|penätä}}
+* Finnish: {{t+|fi|painostaa}}, {{t+|fi|vaatia}}, {{t+|fi|penätä}}, {{t+|fi|houkutella}}
 * Galician: {{t+|gl|empurrar}}
 * German: {{t+|de|drängen}}
 * Italian: {{t+|it|spingere}}, {{t+|it|insistere}}
