t+fi:[[tempoa]] t+fi:[[kiskoa]] ([[WT:EDIT|Assisted]]) <pull#63908001>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -174,7 +174,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Egyptian: {{t-egy|jtḥ|h=i-t-H-V1:D40}}
 * Esperanto: {{t+|eo|tiri}}
 * Estonian: {{t|et|tõmbama}}
-* Finnish: {{t+|fi|vetää}}
+* Finnish: {{t+|fi|vetää}}, {{t|fi|tempoa}}, {{t+|fi|kiskoa}}
 * French: {{t+|fr|tirer}}
 * Friulian: {{t|fur|tirâ}}
 * Galician: {{t|gl|puxar}}, {{t+|gl|turrar}}
