--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -86,7 +86,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Persian: {{t+|fa|پیچ|tr=pič}}
 * Polish: {{t+|pl|zakręt|m}}
 * Portuguese: {{t+|pt|curva}}
-* Romanian: {{t+|ro|curbă|f}}, {{t+|ro|curbe|f-p}}
+* Romanian: {{t+|ro|curbă|f}}
 * Russian: {{t+|ru|изги́б|m}}, {{t+|ru|крива́я|f}}, {{t+|ru|поворо́т|m}}
 * Sanskrit: {{t+|sa|अङ्कस्|n}}
 * Scottish Gaelic: {{t|gd|bogha}}, {{t|gd|lùb|f}}
