t+akl:[[buno']] ([[WT:EDIT|Assisted]]) <stab#63912648>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -155,6 +155,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 
 =====Translations=====
 {{trans-top|To pierce or wound with pointed object}}
+* Aklanon: {{t|akl|buno'}}
 * Arabic: {{t|ar|طَعَنَ}}
 * Armenian: {{t+|hy|խոցել}}
 * Asturian: {{t+|ast|apuñalar}}
