--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -44,6 +44,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
 * Afrikaans: {{t+|af|tel}}
+* Aklanon: {{t|akl|bilang}}
 * Albanian: {{t+|sq|njeh}}, {{t+|sq|numëroj}}
 * American Sign Language: {{t|ase|Flat9@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp Flat9@InFinger-PalmDown-FlatB@CenterChesthigh}}
 * Arabic: {{t+|ar|عَدَّ}}
