--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -709,7 +709,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # {{lb|en|slang|dated}} The failure of a [[college]] [[officer]] or [[student]] to be present at any appointed exercise.
 # A [[skein]] of [[yarn]].
 #: {{rfquotek|en|Wright}}
-# {{lb|en|slang|uncountable}} That which is used to dilute or adulterate a recreational drug.
+# {{lb|en|slang|uncountable}} That which is used to [[dilute]] or [[adulterate]] a recreational drug.
+#: {{syn|en|[[mix#Noun|mix]]}}
 #: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
 # {{lb|en|fashion}} A notch shaved into an eyebrow.
 # {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
