t+akl:[[pili']] ([[WT:EDIT|Assisted]]) <choose#63925502>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -48,6 +48,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 
 {{trans-top|to pick}}
 * Afrikaans: {{t+|af|kies}}
+* Aklanon: {{t|akl|pili'}}
 * Albanian: {{t+|sq|zgjedh}}
 * Arabic: {{t|ar|اِخْتَارَ}}
 *: Egyptian Arabic: {{t|arz|اختار|tr=iḵtār}}
