--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -26,7 +26,7 @@
 # {{rfdef|ja|sort=心10}}
 
 ====Readings====
-* {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu)}}
+* {{ja-readings|on=しん|kun=つつしむ}}
 
 ----
 
