t+tr:[[mal olmak]] ([[WT:EDIT|Assisted]]) <cost#63931506>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -145,6 +145,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 {{trans-top|to cause something to be lost}}
 {{trans-mid}}
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
+* Turkish: {{t+|tr|mal olmak}}
 {{trans-bottom}}
 
 ===Etymology 2===
