t+akl:[[sanga]] ([[WT:EDIT|Assisted]]) <branch#63934880>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -66,6 +66,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk}}
 * Afrikaans: {{t+|af|tak}}
+* Aklanon: {{t|akl|sanga}}
 * Albanian: {{t+|sq|degë|f}}
 * Arabic: {{t|ar|فَرْع|m}}
 *: Egyptian Arabic: {{t|arz|فرع|m|tr=farʿ}}, {{t|arz|غصن|m|tr=ḡuṣn}}
