--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -122,7 +122,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 
 ====Translations====
 {{trans-top|(transitive) to use the mouth to pull in (liquid etc)}}
-* Aklanon: {{t|akl|sipsip}}
+* Aklanon: {{t|akl|sipsip}}, {{t|akl|supsup}}
 * Albanian: {{t+|sq|thith}}
 * Arabic: {{t+|ar|مَصَّ}}
 *: Egyptian Arabic: {{t|arz|مص|tr=maṣṣ}}
