--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -95,7 +95,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 
 ----
 
-==Interlingua==
+ĎëäÇ==Interlingua==
 
 ===Adverb===
 {{head|ia|adverb}}
@@ -106,6 +106,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Equivalent in meaning to English [[#English|i.e.]].
 
 ----
+șŐŎŌÖŘŴŲ
 
 ==Latin==
 
