--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -20,6 +20,7 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 
 ====Derived terms====
 {{der3|en|
+|blonde bombshell
 |atomic blonde
 |bottle blonde
 |dirty blonde
