/* Derived terms */ <blond#63949273>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -216,7 +216,32 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-bottom}}
 
 ===Derived terms===
-{{der3|en|ash blond|bleached blond|blondie|blondish|blondism|blondly|blond metal|bottle blond|dirty blond|dishwater blond|golden blond|honey blond|platinum blond|sandy blond|strawberry blond|ultrablond|Venetian blond|white blond}}
+{{der3|en
+|ash blond
+|atomic blond
+|bleached blond
+|blonde
+|blondie
+|blondish
+|blondism
+|blondly
+|blond bombshell
+|blond metal
+|bottle blond
+|dirty blond
+|dishwater blond
+|dumb blond
+|golden blond
+|honey blond
+|peroxide blond
+|platinum blond
+|sandy blond
+|strawberry blond
+|titanium blond
+|ultrablond
+|Venetian blond
+|white blond
+}}
 
 ====See also====
 * [[brunet]], [[brunette]]
