--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -25,8 +25,11 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 |bottle blonde
 |dirty blonde
 |dumb blonde
+|golden blonde
 |honey blonde
 |peroxide blonde
+|platinum blonde
+|sandy blonde
 |strawberry blonde
 |titanium blonde
 }}
