--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -59,6 +59,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Chechen: {{t-needed|ce}}
 * Chinese:
 *: Mandarin: {{t+|cmn|花費}}, {{t+|cmn|花费|tr=huāfèi}}
+* Cornish: {{t|kw|costya}}
 * Czech: {{t+|cs|stát}}
 * Danish: {{t|da|koste}}
 * Dutch: {{t+|nl|kosten}}
