t+jv:[[ngetung]] ([[WT:EDIT|Assisted]]) <count#63955138>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -96,6 +96,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Irish: {{t|ga|ríomh}}, {{t|ga|áirigh}}, {{t|ga|comhair}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
+* Javanese: {{t|jv|ngetung}}
 * Kazakh: {{t+|kk|санау}}
 * Khmer: {{t+|km|រាប់}}
 * Komi-Permyak: {{t|koi|артавны}}
