--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -364,14 +364,15 @@ See combined section below.
 * Haitian Creole: {{t|ht|atrap}}
 * Hungarian: {{t+|hu|elkap}}
 * Ido: {{t+|io|kaptar}}
+* Indonesian: {{t+|id|tangkap}}
 * Ingush: {{t|inh|лаьца}}
 * Irish: {{t|ga|ceap}}, {{t|ga|beir ar}}
 * Italian: {{t+|it|agguantare}}, {{t+|it|acchiappare}}, {{t+|it|afferrare}}, {{t+|it|chiappare}}, {{t+|it|catturare}}
 * Japanese: {{t+|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t+|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
 * Latin: {{t+|la|capiō}}
 * Javanese: {{t+|jv|cekel}}
-* Latgalian: {{t|ltg|giut}}, {{t|ltg|giusteit}}, {{t|ltg|čupt}}, {{t|ltg|tvert}}
 {{trans-mid}}
+* Latgalian: {{t|ltg|giut}}, {{t|ltg|giusteit}}, {{t|ltg|čupt}}, {{t|ltg|tvert}}
 * Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
 * Lombard: {{t|lmo|ciappà}}, {{t|lmo|ciapà}}
 * Malay: {{t|ms|tangkap}}
