t+kaw:[[tĕka]] ([[WT:EDIT|Assisted]]) <come#64001682>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -289,6 +289,7 @@ In older forms of English, when the pronoun ''[[thou]]'' was in active use, and 
 * Occitan: {{tt+|oc|venir}}, {{tt|oc|vir}}
 * Old Assamese: {{tt|inc-oas|আস্}}, {{tt|inc-oas|আ}}
 * Old English: {{tt|ang|cuman}}
+* Old Javanese: {{t|kaw|tĕka}}
 * Old Saxon: {{tt|osx|kuman}}
 * Old Turkic: {{tt|otk|𐰚𐰠|tr=kel-}}
 * Oriya: {{t|or|ଆସିବା}}
