--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -190,7 +190,8 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Indonesian: {{t+|id|menarik}}, {{t+|id|tarik}}
 * Italian: {{t+|it|tirare}}
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t+|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
-* Jarai: {{t|jra|dui }}
+* Jarai: {{t|jra|dui}}
+* Javanese: {{t|jv|tarik}}
 * Kalmyk: {{t|xal|татх}}
 * Kaurna: {{t|zku|watunthi}}
 * Kazakh: {{t+|kk|тарту}}, {{t|kk|сүйреу}}
