--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -16,7 +16,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 {{en-proper noun|head=[[new|New]] [[Zealand]]}}
 
 # {{senseid|en|Q664}}{{place|en|country|cont/Oceania}}, to the east of {{l|en|Australia}}. Official name: New Zealand. Abbreviation: '''[[NZ]]''' or {{l|en|Aotearoa}}
-# The [[islands]] of New Zealand, especially the North Island, South Island and nearby [[coastal]] islands.
+# The [[islands]] of New Zealand, especially the [[North Island]], [[South Island]] and nearby [[coastal]] islands.
 # The Realm of New Zealand, including the Cook Islands, Niue, Tokelau and the Ross Dependency.
 
 ====Synonyms====
