--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -6,6 +6,8 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 
 Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {{noncog|de|schneiden}}), which still survives in some dialects as {{m|en|snithe}}.
 
+Adjective sense of "drunk" (now rare and now usually used in the originally jocular derivative form of ''[[half-cut]]'') dates from the 17th century, from ''cut in the leg'', ''to have cut your leg'', euphemism for being very drunk.
+
 ===Pronunciation===
 * {{IPA|en|/kʌt/}}
 * {{audio|en|en-us-cut.ogg|Audio (US)}}
