t+jv:[[muntah]] ([[WT:EDIT|Assisted]]) <vomit#64026754>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -93,6 +93,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する}}, {{t+|ja|戻す|tr=もどす, modosu}}
 * Jarai: {{t|jra|ŏ}}
+* Javanese: {{t|jv|muntah}}
 * Karelian: {{t|krl|oksendua}}
 * Kazakh: {{t+|kk|құсу}}
 * Khmer: {{t+|km|ក្អួត|tr=k’uət}}
