t+kaw:[[utah]] ([[WT:EDIT|Assisted]]) <vomit#64026760>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -122,6 +122,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 *: Nynorsk: {{t|nn|kasta opp}}, {{t|nn|spy}}
 * Occitan: {{t+|oc|vomir}}, {{t+|oc|racar}}, {{t+|oc|rendre}}
 * Old English: {{t|ang|spīwan}}
+* Old Javanese: {{t|kaw|utah}}
 * Old Norse: {{t|non|spýja}}
 * Persian: {{t+|fa|قی کردن|tr=qay kardan}}
 * Polish: {{t+|pl|wymiotować|impf}}, {{t+|pl|rzygać|impf}}, {{t+|pl|zwracać|impf}}
