t+su:[[guludug]] ([[WT:EDIT|Assisted]]) <thunder#64031241>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -209,6 +209,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Sorbian:
 *: Upper Sorbian: {{t|hsb|hrimanje|n}}
 * Spanish: {{t+|es|trueno|m}}
+* Sundanese: {{t+|su|guludug}}
 * Swahili: {{qualifier|nc 9/10}} {{t+check|sw|radi}}
 * Swedish: {{t+|sv|åska|c}}, {{t|sv|([[åsk]]) [[smäll]]|c}}, {{t+|sv|dunder|c}}
 * Tabasaran: {{t|tab|гургум}}
