--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -179,6 +179,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Glagolitic: {{t|cu|лѣпъ}}, {{t|cu|красьнъ}}
 * Old East Slavic: {{t|orv|лѣпъ}}, {{t|orv|красьнъ}}
 * Old English: {{t|ang|fæġer}}
+* Old Javanese: {{t|kaw|bĕcik}}
 * Old Norse: {{t|non|fagr}}
 * Old Occitan: {{t|pro|bel}}
 * Oriya: {{t|or|ସୁନ୍ଦର}}
