--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -186,6 +186,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Maori: {{t|mi|oka}}, {{t|mi|pūmuka}}
 * Norwegian: {{t+|no|stikke}}
 {{trans-mid}}
+* Old Javanese: {{t|kaw|suduk}}
 * Persian: {{t+|fa|خلاندن|tr=xalândan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|apunhalar}}, {{t|pt|esfaquear}}
 * Quechua: {{t|qu|t'urpuy}}
