/* English */ /*Assyrian Neo-Aramaic */ <France#64039649>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -99,6 +99,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Armenian: {{t+|hy|Ֆրանսիա}}
 * Aromanian: {{t|rup|Gallia}}, {{t|rup|Frantsia}}
 * Assamese: {{t|as|ফ্ৰান্স|sc=Beng}}
+* Assyrian Neo-Aramaic: {{t|aii|ܦܪܢܓܝܐ|tr=prāngya}}
 * Asturian: {{t+|ast|Francia|f}}
 * Azerbaijani: {{t+|az|Fransa}}
 * Bashkir: {{t|ba|Франция|sc=Cyrl}}
