--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -346,6 +346,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Latvian: {{t|lv|griezt}}
 * Low German:
 *: German Low German: {{t|nds-de|snieden}}
+* Malay: {{t+|ms|potong}}
 * Maori: {{t|mi|whakaiho}} {{qualifier|of hair}}, {{t|mi|tarotaro}} {{qualifier|of hair}}
 * Occitan: {{t+|oc|talhar}}
 * Polish: {{t+|pl|kroić|impf}}
