--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -154,7 +154,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вѣтвь|f}}
 * Old English: {{t|ang|bōg|m}}, {{t+|ang|twiġ|n}}
-* Old Javanese: {{t|kaw|pang}}
+* Old Javanese: {{t|kaw|paṅ}}
 * Old Tupi: {{t|tpw|akã}}
 * Oriya: {{t|or|ଡାଳ}}, {{t|or|ଶାଖା}}
 * Oroch: {{t|oac|га̄}}
