--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -98,7 +98,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * German: {{t+|de|Neuseeland|n}}
 * Greek: {{t+|el|Νέα Ζηλανδία|f}}
 * Gujarati: {{t|gu|ન્યુઝીલેન્ડ|sc=Gujr}}
-* Hawaiian: {{t|haw|Aotearoa}} ({{t|haw|Aokealoa}}), {{t|haw|Nukilani}}
+* Hawaiian: {{t|haw|Aokealoa}}, {{t|haw|Aotearoa}}, {{t|haw|Nukilani}}
 * Hebrew: {{t|he|נְיוּ זִילַנְד|f|tr=niu ziland}}
 * Hindi: {{t|hi|न्यू ज़ीलंड}}, {{t|hi|न्यूज़ीलैंड}}, {{t+|hi|न्यूज़ीलैण्ड}}
 * Hungarian: {{t+|hu|Új-Zéland}}
