--- a/en/昝/昝.16965.wikitext
+++ b/en/昝/昝.16965.wikitext
@@ -30,6 +30,10 @@
 
 # a [[dual]] [[pronoun]], [[I]], [[you]] and [[me]], [[we]] [[two]]
 
+====Related terms====
+{{zh-dial|咱們}}
+
+{{zh-cat|Two}}
 ----
 
 ==Japanese==
