t+msk:[[dakup]] ([[WT:EDIT|Assisted]]) <catch#64076142>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -376,6 +376,7 @@ See combined section below.
 * Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
 * Lombard: {{t|lmo|ciappà}}, {{t|lmo|ciapà}}
 * Malay: {{t|ms|tangkap}}
+* Mansaka: {{t|msk|dakup}}
 * Maore Comorian: {{t|swb|para|alt=upara}}
 * Maori: {{t|mi|hāhā}} {{qualifier|referring to the breath}}
 * Marathi: {{t|mr|पकडणे}}
