--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -209,6 +209,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Lombard: {{t|lmo|tirà}}
 * Macedonian: {{t|mk|влече|impf}}
 * Malay: {{t+|ms|tarik}}
+* Mansaka: {{t|msk|gabot}}
 * Maori: {{t|mi|keu}} {{qualifier|a trigger of a gun, or power tool}}, {{t|mi|kume }}, {{t|mi|tō }}
 * Mongolian: {{t+|mn|татах}}, {{t+|mn|урах}}
 * Nepali: {{t|ne|तान्नु}}
