--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -114,7 +114,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Macedonian: {{t|mk|брои|impf}}
 * Malay: {{t+|ms|kira}}, {{t+|ms|bilang}}, {{t+|ms|hitung}}
 * Maltese: {{t|mt|għadd}}
-* Mansaka: {{t|msk|bilang}}
+* Mansaka: {{t|msk|bilang}}, {{t|msk|isip}}
 * Maore Comorian: {{t|swb|hisaɓu|alt=uhisaɓu}}
 * Maori: {{t|mi|tatau}}
 * Middle English: {{t|enm|counten}}
