--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -347,7 +347,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Low German:
 *: German Low German: {{t|nds-de|snieden}}
 * Malay: {{t+|ms|potong}}, {{t|ms|memotong}}
-* Mansaka: {{t|msk|otod}}
+* Mansaka: {{t|msk|otod}}, {{t|msk|garab}}
 * Maori: {{t|mi|whakaiho}} {{qualifier|of hair}}, {{t|mi|tarotaro}} {{qualifier|of hair}}
 * Occitan: {{t+|oc|talhar}}
 * Old Javanese: {{t|kaw|kĕṭok}}
