--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -368,6 +368,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Thai: {{t+|th|ตัด}}, {{t+|th|หั่น}}
 * Tigrinya: {{t|ti|ቁረጽ}}
 * Welsh: {{t+|cy|torri}}
+* Western Bukidnon Manobo: {{t|mbb|garab}}
 * Westrobothnian: {{t|gmq-bot|täli}}
 * Yiddish: {{t|yi|שנײַדן}}, {{t|yi|שערן}}
 {{trans-bottom}}
