t+mbb:[[pili']] ([[WT:EDIT|Assisted]]) <choose#64080806>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -154,6 +154,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 * Vietnamese: {{t+|vi|chọn}}, {{t+|vi|lựa chọn}}, {{t+|vi|kén chọn}}
 * Walloon: {{t+|wa|tchoezi}}
 * Welsh: {{t+|cy|dewis}}
+* Western Bukidnon Manobo: {{t|mbb|pili'}}
 {{trans-bottom}}
 
 {{trans-top|to elect}}
