t+msk:[[palli]] ([[WT:EDIT|Assisted]]) <choose#64080807>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -109,6 +109,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 * Macedonian: {{t|mk|и́збира|impf|sc=Cyrl}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|għażel}}
+* Mansaka: {{t|msk|palli}}
 * Maori: {{t|mi|whiri}}, {{t|mi|kōwhiri }}
 * Middle English: {{t|enm|chesen}}
 * Mongolian: {{t+|mn|сонгох|sc=Cyrl}}
