t+ta:[[ஐக்கிய இராச்சியத்தில்]] ([[WT:EDIT|Assisted]]) <United Kingdom#64083846>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -132,7 +132,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Swedish: {{t+|sv|Förenade kungariket|n}}
 * Tagalog: {{t|tl|Reyno Unido}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
-* Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
+* Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}, {{t|ta|ஐக்கிய இராச்சியத்தில்}}
 * Tatar: {{t|tt|Берләшкән Патшалык}}
 * Telugu: {{t+|te|యునైటెడ్ కింగ్‌డమ్|sc=Telu}}
 * Thai: {{t+|th|สหราชอาณาจักร}}
