--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -38,6 +38,7 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 ====Derived terms====
 * {{l|fr|cumul des mandats}}
 * {{l|fr|mandat d'arrêt}}
+* {{l|fr|mandat de perquisition}}
 
 ====Descendants====
 * {{desc|tr|manda|bor=1}}
