--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -136,8 +136,9 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Malay: {{t|ms|dahan}}
 * Maltese: {{t|mt|fergħa|f}}
 * Manchu: {{t|mnc|ᡤᠠᡵᡤᠠᠨ}}
-{{trans-mid}}
+* Maranao: {{t|mrw|sanga}}
 * Middle English: {{t|enm|braunche}}
+{{trans-mid}}
 * Miyako: {{t|mvi|枝|tr=ゆだ, yuda}}
 * Mongolian: {{t+|mn|мөчир|sc=Cyrl}}
 * Nahuatl: {{t|nah|cuauhmaitl}}
