t+mrw:[[bilang]] ([[WT:EDIT|Assisted]]) <count#64094726>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -117,6 +117,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Mansaka: {{t|msk|bilang}}, {{t|msk|isip}}
 * Maore Comorian: {{t|swb|hisaɓu|alt=uhisaɓu}}
 * Maori: {{t|mi|tatau}}
+* Maranao: {{t|mrw|bilang}}
 * Middle English: {{t|enm|counten}}
 * Mongolian: {{t+|mn|тоолох}}
 * Navajo: {{t|nv|ííníshtaʼ}}
