--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -22,4 +22,4 @@
 # {{rfdef|ja|sort=人10}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=[[おきな]] (okina)}}
+* {{ja-readings|on=そう,す|kun=おきな}}
