/* English */ <south pole#64107672>

--- a/en/s/south pole.6995.wikitext
+++ b/en/s/south pole.6995.wikitext
@@ -8,7 +8,7 @@
 {{en-noun}}
 
 # The [[southernmost]] [[point]] on [[celestial]] [[body|bodies]] other than [[Earth]].
-# The [[negative]] [[pole]] of a [[magnetic]] [[dipole]] that seeks geographic [[south]].
+# {{lb|en|electromagnetism}} The [[negative]] [[pole]] of a [[magnetic]] [[dipole]] that seeks geographic [[south]].
 # {{alternative form of|en|South Pole}}
 
 ====Synonyms====
@@ -24,7 +24,7 @@
 {{trans-top|the southernmost point on a celestial body}}
 * Arabic: {{t|ar|اَلْقُطْب اَلْجَنُوبِيّ|m}}
 * Chinese:
-*: Mandarin: {{t+|cmn|南極|sc=Hani}}, {{t+|cmn|南极|tr=nánjí|sc=Hani}}
+*: Mandarin: {{t+|zh|南極|sc=Hani}}, {{t+|zh|南极|tr=nánjí|sc=Hani}}
 * Dutch: {{t+|nl|zuidpool|m}}
 * Finnish: {{t+|fi|etelänapa}}
 * French: {{t+|fr|pôle Sud|m}}
