--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -307,6 +307,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 # {{lb|en|computing}} A [[visual]] [[style]] on a [[web page]] that causes the styled [[element]]s to float above or beside others.
 #* '''2007''', Michael Bowers, ''Pro CSS and HTML Design Patterns'' (page 93)
 #*: When a '''float''' cannot fit next to another float, it moves down below it. A float's position, size, padding, borders, and margins affect the position of adjacent floats and adjacent inline content.
+# {{lb|en|biology}} The gas-filled sac, bag or body of a [[siphonophore]]
 
 ====Synonyms====
 * {{sense|Shares offered to the public:}} {{l|en|initial public offering}}
