--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -97,7 +97,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 From {{bor|pl|la|et cētera}}.
 
 ===Pronunciation===
-* {{pl-IPA|/et ˈcetera/}}
+* {{pl-IPA|et ˈcetera}}
 
 ===Phrase===
 {{head|pl|phrase|head=[[et]] [[cetera]]}}
