--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -441,6 +441,6 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 ==Faroese==
 
 ===Noun===
-{{fy-noun}}
+{{head|fo|noun}}
 
 # [[fleet]], [[navy]]
