--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -184,6 +184,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Guaraní: {{t+|gn|ñe'ẽ}}
 * Haitian Creole: {{t|ht|pale}}
 * Hebrew: {{t+|he|דיבר|tr=dibér|alt=דיבר \ דִּבֵּר}}
+* Higaonon: {{t|mba|minikagi}}
 * Hindi: {{t+|hi|बोलना}}
 * Hungarian: {{t+|hu|beszél}}
 * Icelandic: {{t+|is|tala}}
@@ -215,9 +216,9 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Luxembourgish: {{t|lb|schwätzen}}
 * Lü: {{t-needed|khb}}
 * Macedonian: {{t+|mk|збо́рува|impf}}
-{{trans-mid}}
 * Malay: {{t|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക|sc=Mlym}}
+{{trans-mid}}
 * Maltese: {{t|mt|tkellem}}
 * Manchu: {{t|mnc|ᡤᡳᠰᡠᡵᡝᠮᠪᡳ}}
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
