--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 * Bulgarian: {{t+|bg|плавам}}
 * Burmese: {{t+|my|မျော}}
 * Catalan: {{t+|ca|flotar}}
+* Cebuano: {{t|ceb|lutaw}}
 * Cherokee: {{t|chr|ᎧᏄᎯ}}
 * Chinese:
 *: Cantonese: {{t+|yue|浮|tr=fau4}}
