--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -103,6 +103,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
 * Luhya: {{t|luy|kumuchosi}}
+* Lutshootseed: {{t|lut|kəpu}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t+|ms|kot}}
 * Manx: {{t|gv|cooat|m}}
