t+mba:[[guyud]] ([[WT:EDIT|Assisted]]) <pull#64228777>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -184,6 +184,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Greek: {{t+|el|τραβώ}}
 *: Ancient: {{t|grc|ἕλκω}}
 * Hebrew: {{t+|he|משך|m|tr=mashákh}}
+* Higaonon: {{t|mba|guyud}}
 * Hindi: {{t|hi|खींचना}}
 * Hungarian: {{t+|hu|húz}}
 * Icelandic: {{t+|is|draga}}, {{t+|is|toga}}
