--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -16,8 +16,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * {{a|UK}} {{IPA|en|/fɹɑːns/|/fɹæns/}}
 * {{a|US}} {{IPA|en|/fɹæns/}}
 * {{audio|en|en-us-France.ogg|Audio (US)}}
-* {{rhymes|en|ɑːns|æns|s1=1}}
-* {{rhymes|en|æns}}
+* {{rhymes|en|ɑːns|æns|s=1}}
 
 ===Proper noun===
 {{en-proper noun|Frances}}
