--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -75,6 +75,7 @@ From {{der|en|ur|پاجامہ|tr=pājāma}}/{{der|en|hi|पैजामा}}, fr
 * Latvian: {{t|lv|pidžama|f}}
 * Lithuanian: {{t|lt|pižama|f}}
 * Macedonian: {{t|mk|пижа́ма|f}}
+* Malayalam: {{t+|ml|പൈജാമ}}
 * Maltese: {{t|mt|paġama|f}}
 * Manx: {{t|gv|cullee chadlee|f}}, {{t|gv|pyjamaghyn}}
 * Maori: {{t|mi|kākahu moe}}
@@ -111,6 +112,7 @@ From {{der|en|ur|پاجامہ|tr=pājāma}}/{{der|en|hi|पैजामा}}, fr
 
 {{trans-top|loose-fitting trousers worn in the Far East}}
 * Bulgarian: {{t+|bg|шалвари|m-p}}
+* Malayalam: {{t+|ml|പൈജാമ}}
 * Polish: {{t+|pl|piżama|f}}, {{t+|pl|pidżama|f}}
 {{trans-mid}}
 {{trans-bottom}}
