/* Translations */ fixing broken link so it points to the root form of the verb <float#64267006>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -185,7 +185,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 * French: {{t+|fr|flotter}}
 * German: {{t+|de|gleiten}}, {{t+|de|schweben}}
 * Hungarian: {{t+|hu|lebeg}}
-* Japanese: {{t+|ja|飛ぶ|tr=tobu}}, {{t|ja|浮遊する|tr=fuyūsuru}}, {{t+|ja|浮く|tr=uku}}
+* Japanese: {{t+|ja|飛ぶ|tr=tobu}}, {{t|ja|浮遊|tr=fuyū}}, {{t+|ja|浮く|tr=uku}}
 * Latin: {{t|la|volito}}
 * Malay:
 *: Jawi: {{t|ms|امبڠ|sc=Arab}}
