--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -388,6 +388,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * West Frisian: {{t|fy|bûter|c}}
 * Wolof: {{t|wo|bóor}}, {{t+|wo|diw}}
 * Xârâcùù: {{t|ane|dibèè}}
+* Yakut: {{t|sah|арыы}}
 * Yiddish: {{t|yi|פּוטער|f}}
 * Yola: {{t|yol|buthther}}
 * Yup'ik: {{t|esu|masslaaq}}
