--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -107,6 +107,7 @@
 
 ===Etymology 2===
 {{ja-kanjitab|わ|yomi=o}}
+Possibly connected with {{cog|ja|我|tr=ware|t=I; oneself, thou}} and {{cog|ja|我が|tr=waga|t=my, our}}, both from  {{cog|ja|我|tr=wa|t=I, me}}.
 
 ====Pronunciation====
 {{ja-pron|わ|y=o}}
