t+dlg:[[арыы]] ([[WT:EDIT|Assisted]]) <butter#64272117>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -229,6 +229,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Czech: {{t+|cs|máslo|n}}
 * Dalmatian: {{t|dlm|butir|m}}
 * Danish: {{t+|da|smør|n}}
+* Dolgan: {{t|dlg|арыы}}
 * Dutch: {{t+|nl|boter|f}}
 * East Central German: {{t|gmw-ecg|Putter|f}} {{q|Silesian}}
 * Erzya: {{t|myv|ой|f}}
