--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -178,6 +178,8 @@ In older forms of English, when the pronoun ''[[thou]]'' was in active use, and 
 * [[c'mere]]
 * [[c'min]]
 * [[c'mon]]
+=====Conjugation=====
+{{en-conj|come|came|come}}
 
 =====Translations=====
 {{trans-top|to move nearer}}
