--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -360,8 +360,31 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 ====Noun====
 {{en-noun}}
 
-# A [[quality]] of an [[object]] experienced by touch.
+# The [[sense]] of [[touch]].
+#* {{quote-book|en|year=1838
+|author=John Burns
+|title=The Principles of Surgery
+|volume=1
+|page=330
+|passage=It begins as a firm elastic swelling, which communicates to the '''feel''' the idea that a fluid is contained under a firm fascia[…].
+}}
+# A [[perception]] experienced mainly or solely through the sense of touch.
 #: ''Bark has a rough '''feel'''.''
+#* {{quote-book|en|year=1809
+|author=King George III of England
+|title=The Later Correspondence of George III, Volume 6
+|chapter=
+|url=http://books.google.com/books?id=q-w8AAAAIAAJ&pg=PA389
+|isbn=9781468565263
+|page=3987
+|passage=Dr. Pope confirms my '''feels''' that the side is no better & the tenderness to the feel as great as when he was last here.
+}}
+#* {{quote-book|en|year=1856
+|author=Alexander Bryan Johnson
+|title=The Physiology of the Senses
+|page=65
+|passage=A large portion of natural magic and sleight of hand is only the severance of sights and '''feels''' that we are accustomed to experience in unison.
+}}
 #* '''1902''', John Buchan, ''The Outgoing of the Tide''
 #*: And then something in the sound or the '''feel''' of the waters made him look down, and he perceived that the ebb had begun and the tide was flowing out to sea.
 # A [[vague]] [[mental]] [[impression]].
