--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -30,6 +30,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
+* Afrikaans: {{t+|af|bv.}} {{qualifier|[[byvoorbeeld]]}}
 * Albanian: {{t|sq|p. sh.}} {{qualifier|[[për shembull]]}}
 * Arabic: {{t|ar|على سبيل المثال}}
 * Armenian: {{t|hy|օր.}} {{qualifier|[[օրինակ]]}}
