t+ky:[[курсак]] ([[WT:EDIT|Assisted]]) <stomach#64337972>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -170,7 +170,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Korean: {{t+|ko|위}} ({{t+|ko|胃}})
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|gede|f}}
-* Kyrgyz: {{t|ky|ашказан}}
+* Kyrgyz: {{t|ky|ашказан}}, {{t+|ky|курсак}}
 * Lao: {{t+|lo|ກະເພາະ}}, {{t|lo|ທ້ອງ}}
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|alvus|m}}, {{t|la|venter|m}}, {{t|la|stomachus|m}}
