t+sah:[[саҥар]] ([[WT:EDIT|Assisted]]) <speak#64345422>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -316,6 +316,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * West Frisian: {{t|fy|sprekke}}
 * White Hmong: {{t|mww|hais lus}}
 * Wolof: {{t+|wo|wax}}
+* Yakut: {{t|sah|саҥар}}
 * Yiddish: {{t+|yi|רעדן}}
 * Zhuang: {{t|za|gangj}}
 * Zulu: {{t|zu|khuluma|alt=-khuluma}}
