--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -204,7 +204,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Khmer: {{t+|km|និយាយ}}, {{t+|km|ក្លាវ}}
 * Korean: {{t+|ko|말하다}}, {{t+|ko|말씀하다}} {{qualifier|honorific}}
 * Kumyk: {{t|kum|сёйлемек}}, {{t|kum|лакъыр этмек}}
-* Kyrgyz: {{t+|ky|айтуу|sc=Cyrl}}, {{t+|ky|сүйлөө|sc=Cyrl}}
+* Kyrgyz: {{t|ky|сүйлө-}}
 * Ladin: {{t|lld|rujné}}
 * Ladino: {{t|lad|avlar}}, {{t|lad|favlar}}
 * Lao: {{t|lo|ເວົ້າ}}, {{t|lo|ພູດ}}, {{t+|lo|ກ່າວ}}
