--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -359,8 +359,8 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 # {{lb|en|uncountable}} The [[will]] or [[ability]] to fight.
 #: {{ux|en|That little guy has a bit of '''fight''' in him after all.&nbsp;&nbsp; As soon as he saw the size of his opponent, all the '''fight''' went out of him.}}
 # {{lb|en|obsolete}} A screen for the combatants in ships.
-#* {{RQ:Dryden Amboyna}}
-#*: Up with your '''fights''', and your nettings prepare.
+#* #* {{RQ:Dryden Amboyna|page=31|passage=Who ever ſaw a noble ſight, / That never view'd a brave Sea Fight: / Hang up your bloody Colours in the Aire, / Up with your '''Fights''', and your Nettings prepare, / Your Merry Mates chear, with a luſty bold ſpright, / Now each Man his brindice, and then to the '''Fight''', {{...}}}}
+
 
 =====Synonyms=====
 * See also [[Thesaurus:fight]]
