https://support.google.com/websearch?p=ws_settings_signin&hl=km <pull#64382534>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -1,6 +1,6 @@
 {{also|Pull}}
 ==English==
-{{wikipedia|dab=pull}}
+{{wikipedia| dab = pull| lang = ខ្មែរ| Language khmer = Kh}}
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|en|/pʊl/}}
