--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -197,7 +197,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Kazakh: {{t+|kk|сезу|sc=Cyrl}}
 * Khmer: {{t|km|មានអារម្មណ៍|tr=mien aarɑm|sc=Khmr}}
 * Korean: {{t+|ko|느끼다}}
-* Kyrgyz: {{t+|ky|сезүү|sc=Cyrl}}
+* Kyrgyz: {{t|ky|сез-}}
 {{trans-mid}}
 * Ladino: {{t|lad|sentir}}, {{t|lad|sintir}}, {{t|lad|rigritar}} {{qualifier|Monastir}}
 * Lao: {{t|lo|ຮູ້ສຶກ}}
