--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -1,6 +1,6 @@
 {{also|Pull}}
 ==English==
-{{wikipedia| dab = pull| lang = ខ្មែរ| Language khmer = Kh}}
+{{wikipedia|dab=pull}}
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|en|/pʊl/}}
