/* Chinese */removed the alternate form ⿰亻⿱⿳亠⿲丨二丨冖丁, which presumably means ⿰亻𠅘. 𠅘 is already a variant of 亭 so unless there is a separate unicode encoding for this character this is unnecessary to include. <停#64388088>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -14,7 +14,7 @@
 ----
 
 ==Chinese==
-{{zh-forms||alt=仃-second round simplified,⿰亻⿱⿳亠⿲丨二丨冖丁}}
+{{zh-forms||alt=仃-second round simplified}}
 [[File:China road sign 禁 1.svg|thumb|100px]]
 
 ===Glyph origin===
