--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -319,6 +319,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 
 ====Descendants====
 * {{desc|tl|tanda}}
+* {{desc|gsw|Thönder}}
 
 ===Verb===
 {{en-verb}}
