--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -3,10 +3,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=20221|canj=OYRN|ids=⿰亻亭}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=20221|canj=OYRN|ids=⿰亻亭,⿰亻𠅘}}
 
 ====Derived characters====
-* {{l|mul|[[𠼵]]}}
+* {{l|mul|𠼵}}
 
 ====References====
 {{Han ref|kx=0110.320|dkj=00864|dj=0236.160|hdz=10194.070|uh=505C}}
