--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -324,7 +324,8 @@ From {{der|nb|non|heitr}}
 ==Old Saxon==
 
 ===Etymology===
-From {{inh|osx|gem-pro|*haitaz}}. Compare {{cog|ang|hāt}}, {{cog|ofs|hēt}}, {{cog|goh|heiz}}, {{cog|non|heitr}}.
+{{dercat|osx|gem-pro|inh=1}}
+From {{inh|osx|gmw-pro|*hait}}. Compare {{cog|ang|hāt}}, {{cog|ofs|hēt}}, {{cog|goh|heiz}}, {{cog|non|heitr}}.
 
 ===Adjective===
 {{head|osx|adjective|head=hēt}}
