--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -58,6 +58,9 @@
 ====Usage notes====
 See {{zh-l|*付}}.
 
+====Descendants====
+* {{desc|en|Fu|bor=1}}, {{l|en|Poh}}
+
 ===Compounds===
 {{zh-der|傅巖|傅粉郎|內傅|傅粉施朱|傅母|太子太傅|傅會|一傅眾咻|傅彩|傅父|傅粉何郎|少傅|師傅|如虎傅翼|外傅|主傅|傅近|大師傅|傅說版築|太傅|傅粉|保傅|施朱傅粉|施丹傅粉|為虎傅翼|皮傅|未傅|理髮師傅|面如傅粉|老師傅|裱褙師傅|篦頭師傅|齊傅楚咻}}
 
