--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -121,6 +121,8 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 *: Cyrillic: {{t|sh|плаво̀кос}}
 *: Roman: {{t+|sh|plavòkos}}
 * Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|swětłowłosaty}}
 * Spanish: {{t+|es|rubio}}, {{t+|es|macho}} {{qualifier|Costa Rica, colloquial}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, {{t+|sv|blond}}
 * Tagalog: {{t|tl|rubyo}}
