--- a/en/愄/愄.15640.wikitext
+++ b/en/愄/愄.15640.wikitext
@@ -25,7 +25,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-used|怫愄}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
