t+mn:[[хэлэх]] ([[WT:EDIT|Assisted]]) <speak#64457362>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -226,7 +226,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Middle English: {{t|enm|speken}}, {{t|enm|worden}}
 * Mingrelian: {{t|xmf|რაგადი}}, {{t|xmf|რაგაჯი}}
 * Mirandese: {{t|mwl|falar}}
-* Mongolian: {{t+|mn|ярих|sc=Cyrl}}
+* Mongolian: {{t+|mn|ярих|sc=Cyrl}}, {{t+|mn|хэлэх}}
 * Moroccan Amazigh: {{t|zgh|ⵙⴰⵡⵍ}}, {{t|zgh|ⵙⵙⵉⵡⵍ}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
