--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -80,6 +80,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Bamber Bridge
 |Beitbridge
 |Blythe Bridge
+|Bonar Bridge
 |bowstring bridge
 |[[Bridge End]], [[Bridgend]]
 |bridge loan
