t+de:[[Anke]] ([[WT:EDIT|Assisted]]) <butter#64459802>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -242,7 +242,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Friulian: {{t|fur|sponğhe}}
 * Galician: {{t+|gl|manteiga|f}}
 * Georgian: {{t|ka|კარაქი}}
-* German: {{t+|de|Butter|f}}
+* German: {{t+|de|Butter|f}}, {{t+|de|Anke|m}} {{qualifier|Switzerland}}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
 * Greek: {{t+|el|βούτυρο|n}}
 *: Ancient: {{t|grc|βούτυρον|n}}
