--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -103,6 +103,9 @@ Inflected form of {{m|fr|camer}}.
 # {{inflection of|fr|camer||3|s|pres|subj}}
 # {{inflection of|fr|camer||2|s|impr}}
 
+===Further reading===
+* {{R:TLFi}}
+
 {{c|fr|Recreational drugs}}
 
 ----
