--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -195,6 +195,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Breton: {{tt+|br|pont|m}}
 * Bulgarian: {{tt+|bg|мост|m}}
 * Burmese: {{tt+|my|တံတား}}
+* Buryat: {{t|bua|хүүргэ}}
 * Catalan: {{tt+|ca|pont|m}}
 * Cebuano: {{tt|ceb|tulay}}
 * Central Atlas Tamazight: {{tt|tzm|ⵜⵉⵍⴳⴳⵯⵉⵜ|f}}
@@ -280,10 +281,10 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Laz: {{tt|lzz|ხინჯი}}
 * Lingala: {{tt|ln|gwagwa}}, {{tt|ln|gbagba}}
 * Lithuanian: {{tt+|lt|tiltas|m}}
+{{trans-mid}}
 * Livonian: {{tt|liv|sīlda}}
 * Low German:
 *: German Low German: {{tt|nds-de|Brügge|f}}
-{{trans-mid}}
 * Luganda: {{tt|lg|olutindo}}
 * Lun Bawang: {{tt|lnd|afir}}
 * Luxembourgish: {{tt+|lb|Bréck|f}}
