--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -58,7 +58,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 |bricks and mortar
 |drop a brick
 |hit the bricks
-|like a cat on a hot brick
+|like a cat on hot bricks
 |like a ton of bricks
 |make bricks without straw
 |make bricks without straws
