--- a/en/s/spelled.7212.wikitext
+++ b/en/s/spelled.7212.wikitext
@@ -6,6 +6,7 @@
 ===Pronunciation===
 * {{IPA|en|/ˈspɛld/}}
 ** {{audio|en|LL-Q1860 (eng)-Vealhurl-spelled.wav|Audio (UK)}}
+* {{rhymes|en|ɛld|s=1}}
 
 ===Verb===
 {{head|en|verb form}}
