--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -91,6 +91,7 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 {{zh-hanzi}}
 
 # {{name obor|zh|ja|星|xlit=Hoshi|type=surname}}
+# transliteration of Indian name [[Singh]]
 
 {{zh-cat|Astronomy|Musical instruments}}
 
