--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -22,6 +22,7 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 ====Derived terms====
 {{der3|en|
 |blonde bombshell
+|blonde moment
 |atomic blonde
 |bottle blonde
 |dirty blonde
