--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -20,6 +20,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 
 ===Proper noun===
 {{en-proper noun|Frances}}
+{{en-proper noun|Loser}}
 
 # {{senseid|en|Q142}}{{place|en|country|in western|cont/Europe|{{,}} Member state of the [[European Union]] (since 1993), having <<capital/Paris>> as its capital city, bounded by Belgium, Luxembourg, Germany, Switzerland, Italy, Monaco, Andorra and Spain|official=French Republic}}
 #* {{quote-book|en|year=1837| year_published= 1977 |page=237|title= {{w|Mauprat}} |author= {{w|George Sand}}|trans=Stanley Young|publisher=Cassandra Editions|url= https://books.google.co.nz/books?id=NTTeAwAAQBAJ |isbn= 9780897338677 |passage= For a long time the dormouse and polecat had seemed to him overfeeble enemies for his restless valour, even as the granary floor seemed to afford too narrow a field. Every day he read the papers of the previous day in the servants' hall of the houses he visited, and it appeared to him that this war in America, which was hailed as the awakening of the spirit of liberty and justice in the New World, ought to produce a revolution in '''France'''.}}
