--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -101,7 +101,7 @@ May be from {{inh|zh|sit-pro|*(d/n)waj||to hang from; to cling to; creeper}} (ST
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=수}}
+{{ko-hanja|수}}
 
 # {{rfdef|ko|sort=土05}}
 
