--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -682,6 +682,9 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 ## An artificial [[navigation]] as distinguished from a [[navigable]] river
 # A [[share]] or [[portion]].
 #: {{ux|en|The lawyer took a '''cut''' of the profits.}}
+# A [[decrease]].
+#: {{ant|en|hike}} {{q|used in same contexts}}; [[increase]]
+#: {{ux|en|The boss took a 5% pay '''cut'''.}}
 # {{lb|en|cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
 # {{lb|en|cricket}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
 # {{lb|en|sports}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
