--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -203,6 +203,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Dutch: {{t+|nl|snijden}}
 * Egyptian: {{t-egy|nšm|h=n:S-m-T30}}
 * Esperanto: {{t|eo|tranĉi}}
+* Evenki: {{t|evn|минэ-}}, {{t|evn|хус-}}
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}, {{t+|fr|inciser}}
 *: Old French: {{t|fro|trenchier}}, {{t|fro|colper}}
