--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -8,7 +8,7 @@
 
 ===Etymology 1===
 {{root|en|ine-pro|*pewH-}}
-From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|fro|conter||add up; tell a story}}, from {{der|en|la|computare}}, present active infinitive of {{m|la|computō||I compute}}. Displaced native {{cog|enm|tellen||to count}} (from {{cog|ang|tellan}}) and {{cog|enm|rimen||to count, enumerate}} (from {{cog|ang|rīman}}). {{doublet|en|compute}}.
+From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|fro|conter||add up; tell a story}}, from {{der|en|la|computō||I compute}}. Displaced native {{cog|enm|tellen||to count}} (from {{cog|ang|tellan}}) and {{cog|enm|rimen||to count, enumerate}} (from {{cog|ang|rīman}}). {{doublet|en|compute}}.
 
 ====Verb====
 {{en-verb}}
