--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -13,6 +13,7 @@ From {{inh|en|enm|ich}}, from {{inh|en|ang|iċ}}, {{m|ang|iċċ|t=I|pos=pronoun}
 ====Pronunciation====
 * {{IPA|en|/itʃ/|/ɪtʃ/}}
 * {{homophones|en|each|itch}}
+* {{rhymes|en|itʃ|ɪtʃ|s=1}}
 
 ====Pronoun====
 {{head|en|pronoun}}
