--- a/en/圦/圦.12989.wikitext
+++ b/en/圦/圦.12989.wikitext
@@ -14,7 +14,7 @@
 ==Chinese==
 {{rfc|zh|apparently a conflation of two things here:
 # 1. variant of 塊, read naturally as kuài;
-# borrowing from Japanese 圦, unverified for ability to meet CFI, and in all probability read 有邊讀邊-style as 入}}
+# borrowing from Japanese 圦, unverified for ability to meet CFI, and in all probability read 有邊讀邊-style as rù}}
 {{zh-forms}}
 
 ===Glyph origin===
