{{spelling pronunciation|zh}}, as {{zh-l|山}}. <圸#64531265>

--- a/en/圸/圸.12986.wikitext
+++ b/en/圸/圸.12986.wikitext
@@ -12,8 +12,11 @@
 ==Chinese==
 {{zh-forms}}
 
-===Etymology===
+===Glyph origin===
 {{obor|zh|ja|圸}}.
+
+===Etymology===
+{{spelling pronunciation|zh}}, as {{zh-l|山}}.
 
 ===Pronunciation===
 {{zh-pron
