--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -176,7 +176,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Polish: {{t+|pl|znajdować|impf}}, {{t+|pl|znaleźć|impf}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Punjabi:
-*: Shahmukhi: {{t|pa|لَبھݨا}}, {{t|pa|ڈُھوْنڈݨا}}, {{t|pa|تَلاش سرنا}}
+*: Shahmukhi: {{t|pa|لَبّھݨا}}, {{t|pa|ڈُھوْنڈݨا}}, {{t|pa|تَلاش کَرنا}}
 * Quechua: {{t|qu|tariy}}, {{t|qu|tarii}}
 * Romanian: {{t+|ro|găsi}}
 * Romansch: {{t|rm|chattar}}, {{t|rm|cattar}}, {{t|rm|catar}}, {{t|rm|chatter}}
