--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -117,6 +117,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Erzya: {{t|myv|пургине}}
 * Esperanto: {{t+|eo|tondro}}
 * Estonian: {{t|et|kõu}}
+* Even: {{t|eve|агди}}
 * Evenki: {{t|evn|агды}}
 * Faroese: {{t|fo|tora|f}}
 * Finnish: {{t+|fi|jyrinä}}, {{t+|fi|jyrähdys}}
