--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -124,6 +124,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Lea Bridge
 |London Bridge
 |low bridge
+|Maguiresbridge
 |Malin Bridge
 |Maryland bridge
 |Menai Bridge
