--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -131,6 +131,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Latvian: {{t|lv|taustīt}}, {{t+|lv|just}}
 * Livonian: {{t|liv|maņņõ}}, {{t|liv|mȯjjõ}}
 * Macedonian: {{t|mk|чувствува}}
+* Nanai: {{t|gld|уйнгэ-}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|feel}}
 * Norwegian: {{t+|no|føle}}, {{t+|no|kjenne}}
 * Occitan:
