--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -82,6 +82,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 *: Lower Sorbian: {{t|dsb|na pś.}} {{qualifier|{{t|dsb|na pśikład}}}}
 * Spanish: {{t|es|p. ej.}} {{qualifier|{{t+|es|por ejemplo}}}}
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t|sv|tex.}} {{t|sv|t. ex.}} {{qualifier|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
+* Tagalog: {{t|tl|hal.}} {{q|{{l|tl|halimbawa}}}}
 * Turkish: {{t|tr|örn.}}
 * Ukrainian: {{t|uk|наприклад}}
 * Vietnamese: {{t|vi|vd.}} {{qualifier|[[ví dụ]]}}
