--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -78,7 +78,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Basque: {{t-needed|eu}}
 * Belait: {{t|beg|jie batien}}
 * Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}, {{t|be|урадлі́вы}}, {{t|be|фа́йны}}
-* Bengali: {{t|bn|সুন্দর|sc=Beng}}
+* Bengali: {{t+|bn|সুন্দর|sc=Beng}}, {{t+|bn|খুবসুরত|sc=Beng}},{{t+|bn|হাসিন|tr=hasin|sc=Beng}}
 * Bikol Central: {{t|bcl|magayon}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
 * Brunei Bisaya: {{t|bsb|bagak}}
@@ -213,7 +213,6 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Sudovian: {{t|xsv|grazi}}, {{t|xsv|skaista|f}}
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
-* Sylheti: {{t|syl|ꠡꠥꠘ꠆ꠖꠞ|tr=śundor}}
 * Tagalog: {{t+|tl|maganda}}
 * Tajik: {{t+|tg|зебо||sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
 * Talysh: {{t|tly|ğəşəng}}, {{t|tly|reçin}}, {{t|tly|rəvoşin}}, {{t|tly|xos}}, {{t|tly|cıvon}}
