--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -295,7 +295,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Lithuanian: {{t|lt|filialas|m}}
 * Nepali: {{t|ne|शाखा}}
 * Persian: {{t+|fa|شعبه|tr=šobe}}
-* Polish: {{t+|pl|oddział|m}}, {{t+|pl|filia|f}}
+* Polish: {{t+|pl|oddział|m}}, {{t+|pl|filia|f}}, {{t+|pl|agenda|f}}
 * Portuguese: {{t+|pt|filial|f}}, {{t+|pt|departamento|m}}, {{t+|pt|divisão|f}}, {{t+|pt|repartição|f}}
 * Romanian: {{t+|ro|filială|f}}, {{t+|ro|sucursală|f}}
 * Russian: {{t+|ru|отделе́ние|n}}, {{t+|ru|филиа́л|m}}
