--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -41,7 +41,7 @@
 |j=
 |mb=
 |md=gā
-|mn=xm,qz,jj,tw:ké/zz:kée/ml,jj,tw:ká
+|mn=xm,qz,tw:ké/zz:kée/ká
 |mn_note=ké/kée - vernacular; ká - literary
 |mn-t=gê2/gia2
 |mn-t_note=gê2 - vernacular; gia2 - literary
