--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -41,7 +41,7 @@
 |j=
 |mb=
 |md=gā
-|mn=xm,qz,tw:ké/zz:kée/ká
+|mn=xm,qz,jj,tw:ké/zz:kée/ml,jj,tw:ká
 |mn_note=ké/kée - vernacular; ká - literary
 |mn-t=gê2/gia2
 |mn-t_note=gê2 - vernacular; gia2 - literary
@@ -95,7 +95,7 @@
 |j=
 |mb=
 |md=gá
-|mn=xm,qz:kè/zz:kèe/xm,qz,tw:kà
+|mn=xm,qz,jj:kè/zz:kèe/xm,qz,tw:kà
 |mn_note=Xiamen, Quanzhou, Taiwan: kè - vernacular; kà - literary
 |mn-t=gê3/gian2
 |mn-t_note=gê3 - vernacular; gian2 - literary
