--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -87,20 +87,20 @@
 ===Pronunciation 2===
 {{zh-pron
 |m=jià
-|m-s=
+|m-s=jia3
 |c=gaa3
 |c-t=
-|g=
+|g=ga3
 |h=pfs=ká/ka;gd=ga3
-|j=
-|mb=
+|j=jia3
+|mb=gǎ
 |md=gá
 |mn=xm,qz,jj:kè/zz:kèe/xm,qz,tw:kà
 |mn_note=Xiamen, Quanzhou, Taiwan: kè - vernacular; kà - literary
 |mn-t=gê3/gian2
 |mn-t_note=gê3 - vernacular; gian2 - literary
 |w=2ka
-|x=
+|x=jia3
 |mc=2
 |oc=n,2
 |cat=n
