--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -26,7 +26,7 @@
 {{Han compound|人|叚|ls=psc|c1=s|c2=p}}.
 
 ===Etymology===
-; to borrow; false
+; “to borrow; false”
 : The sense evolved in the following manner: "to borrow" > "simulate" > "deception; false".
 : Cognate with {{cog|bo|ཀར་སྐྱིན||loan; thing borrowed}}. An [[allofam]] is probably {{och-l|雇|to hire}}.
 
@@ -35,7 +35,7 @@
 |m=jiǎ
 |m-s=
 |c=gaa2
-|c-t=
+|c-t=ga2
 |g=
 |h=pfs=ká;gd=ga3
 |j=
@@ -89,7 +89,7 @@
 |m=jià
 |m-s=jia3
 |c=gaa3
-|c-t=
+|c-t=ga2
 |g=ga3
 |h=pfs=ká/ka;gd=ga3
 |j=jia3
