--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -241,6 +241,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Miyako: {{t|mvi|切|tr=きぃー, ksïï}}
 {{trans-mid}}
 * Nahuatl: {{t|nci|tequi}}, {{t|nci|cotōna}}
+* Nanai: {{t|gld|муи-}}
 * Neapolitan: {{t|nap|taglià}}
 * Nogai: {{t|nog|кесуьв}}
 * Norman: {{t|nrf|coper}}
