--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -114,7 +114,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 ===Noun===
 {{ja-noun|はや}}
 
-# already, now
+# [[already]], [[now]]
 #: {{ja-usex|'''はや'''[[数日]]|'''はや'''-すうじつ}}
 
 ===References===
