/* Derived terms */ <bridge#64650464>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -78,6 +78,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Avonbridge
 |Bailey bridge
 |Bamber Bridge
+|Banbridge
 |Beitbridge
 |Blythe Bridge
 |Bonar Bridge
