--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -581,7 +581,7 @@ From {{inh|it|VL.|*quōmo}} (from {{inh|it|la|quōmodo}}) + {{m|la|et}}.
 Cognate to {{cog|fr|comme}}. See also {{cog|es|como}}/{{m|es|cómo}} and {{cog|ca|com}}.
 
 ===Pronunciation===
-{{it-pr|cóme<audio:It-come.ogg>}}
+{{it-pr|cóme*, cóme<audio:It-come.ogg>}}
 
 ===Adverb===
 {{it-adv}}
@@ -609,6 +609,7 @@ Cognate to {{cog|fr|comme}}. See also {{cog|es|como}}/{{m|es|cómo}} and {{cog|c
 
 ===Further reading===
 * {{R:it:Treccani}}
+* {{R:it:DiPI}}
 
 ===Anagrams===
 * {{anagrams|it|a=cemo|meco}}
