--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -291,8 +291,11 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 ==Asturian==
 {{wikipedia|lang=ast}}
 
+===Pronunciation===
+{{ast-IPA}}
+
 ===Proper noun===
-{{ast-proper noun}}
+{{ast-proper noun|m}}
 
 # {{l|en|Israel}} {{gloss|the state}}
 
