/* Translations */ fi <skirt#64674242>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -284,7 +284,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 {{trans-top|border}}
 * Chinese:
 *: Mandarin: {{t+|cmn|边缘}}, {{t+|cmn|裙边}}
-* Finnish: {{t+|fi|reunus}}, {{t+|fi|helma}}
+* Finnish: {{t|fi|reuna}}, {{t|fi|reunama}}, {{t+|fi|reunus}}, {{t+|fi|lieve}}
 * German: {{t+|de|Saum|m}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|szegély}}
