t+bg:[[поли]] t+bg:[[покрайнина]] t+bg:[[гранича]] t+bg:[[заобикалям]] ([[WT:EDIT|Assisted]]) <skirt#64679646>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -218,6 +218,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 
 {{trans-top|part of dress}}
 * Armenian: {{t+|hy|փեշ}}, {{t+|hy|քղանցք}}
+* Bulgarian: {{t+|bg|поли|f-p}}
 * Catalan: {{t+|ca|faldilla|f}}
 * Czech: {{t+|cs|sukně}}
 * Danish: {{t|da|nederdel|c}}
@@ -282,6 +283,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 {{trans-bottom}}
 
 {{trans-top|border}}
+* Bulgarian: {{t+|bg|покрайнина|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|边缘}}, {{t+|cmn|裙边}}
 * Finnish: {{t|fi|reuna}}, {{t|fi|reunama}}, {{t+|fi|reunus}}, {{t+|fi|lieve}}
@@ -349,6 +351,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 
 ====Translations====
 {{trans-top|to be on or from the border of}}
+* Bulgarian: {{t+|bg|гранича}}
 * Dutch: {{t+|nl|begrenzen}}
 * Finnish: {{t+|fi|ympäröidä}}, {{t+|fi|reunustaa}}
 * German: {{t+|de|umgehen}}, {{t+|de|umrunden}}
@@ -364,6 +367,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 {{trans-bottom}}
 
 {{trans-top|to move around, to avoid the centre}}
+* Bulgarian: {{t+|bg|заобикалям}}
 * Galician: {{t+|gl|bordear}}
 * Maori: {{t|mi|hohoni}}, {{t|mi|taku}}, {{t|mi|honi}}
 {{trans-mid}}
