--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -224,6 +224,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Danish: {{t|da|nederdel|c}}
 * Dutch: {{t+|nl|rok|m}}
 * Esperanto: {{t|eo|jupo}}
+* Estonian: {{t|et|seelik}}
 * Faroese: {{t|fo|niðurpartur|m}}
 * Finnish: {{t+|fi|hame}}
 * French: {{t+|fr|jupe|f}}
@@ -267,6 +268,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 {{trans-top|slang for woman}}
 * Bulgarian: {{t|bg|фу́ста|f|sc=Cyrl}}
 * Czech: {{t+|cs|ženská|f}}
+* Estonian: {{t|et|seelik}}
 * Finnish: {{t+|fi|hame}}; {{t+|fi|hameväki}} {{q|women collectively}}
 * German: {{t+|de|Rock|m}}, {{t|de|Weiberrock|m}}
 * Greek: {{t+|el|φουστάνι|f}}
@@ -300,7 +302,6 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Arabic: {{t-check|ar|التنورَة|f}}
 * Azerbaijani: {{t+check|az|yubka}}
 * Basque: {{t+check|eu|gona}}
-* Estonian: {{t+check|et|seelik}}
 * Georgian: {{t-check|ka|ქვედაკაბა}}
 * Hindi: {{t-check|hi|स्कर्ट}}
 * Indonesian: {{t+check|id|rok}}
