--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -368,9 +368,10 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 
 {{trans-top|to move around, to avoid the centre}}
 * Bulgarian: {{t+|bg|заобикалям}}
+* Finnish: {{t+|fi|kiertää}}
 * Galician: {{t+|gl|bordear}}
-* Maori: {{t|mi|hohoni}}, {{t|mi|taku}}, {{t|mi|honi}}
 {{trans-mid}}
+* Maori: {{t|mi|hohoni}}, {{t|mi|taku}}, {{t|mi|honi}}
 * Russian: {{t+|ru|обходить}}
 {{trans-bottom}}
 
