--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -44,6 +44,11 @@
 |cat=a
 }}
 
+====Etymology 2====
+{{och-l|傀}} "extraordinary" ({{w|Zhouli}}) > {{och-l|瑰}} "rare, marvelous" > a kind precious stone" ({{w|Shijing}}).
+
+{{och-l|傀|tr=*kûi}} seemingly had the same OC rhyme as {{och-l|怪|tr=*kwrêh; *kwêh}}; they may be merely variants ({{zh-ref|Schuessler, 2007}}).
+
 ====Definitions====
 {{zh-hanzi}}
 
