t+gur:[[Fãreŋo]] t-balance ([[WT:EDIT|Assisted]]) <France#64690617>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -130,6 +130,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Esperanto: {{t+|eo|Francio}}, {{t+|eo|Francujo}}
 * Estonian: {{t+|et|Prantsusmaa}}
 * Extremaduran: {{t|ext|Francia|f}}
+* Farefare: {{t|gur|Fãreŋo}}
 * Faroese: {{t|fo|Frakland}}
 * Finnish: {{t+|fi|Ranska}}
 * French: {{t+|fr|France|f}}
@@ -175,9 +176,9 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}, {{t|la|Francogallia}}
 * Latvian: {{t|lv|Francija|f}}
 * Limburgish: {{t+|li|Frankriek}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|Prancūzija}}
 * Livonian: {{t|liv|Prantsūzmō}}
-{{trans-mid}}
 * Low German: {{t+|nds|Frankriek}}, {{t|nds|Frankrich}}
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
