--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -325,7 +325,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Czech: {{t|cs|přeříznout|pf}}
 * Dalmatian: {{t|dlm|taljur}}
 * Danish: {{t|da|udskære}}
-* Daur: {{t|dta|хад-}}
+* Daur: {{t|dta|хad-}}
 * Dutch: {{t+|nl|snijden}}
 * Esperanto: {{t|eo|tranĉi}}
 * Finnish: {{t+|fi|leikata}}
