/* English */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <skirt#64730276>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -41,8 +41,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 #* '''ca. 1599''', {{w|William Shakespeare}}, ''As You Like It'', Act III, sc. 2:
 #*: here in the '''skirts''' of the forest, like fringe upon a petticoat.
 #* {{RQ:Keats Lamia|poem=Isabella|stanza=XXXIX|page=68|passage=I am a shadow now, alas! alas! / Upon the '''skirts''' of human-nature dwelling / Alone: [...]}}
-# The [[diaphragm]], or [[midriff]], in animals.
-#: {{rfquotek|en|Dunglison}}
+# The [[diaphragm]], or [[midriff]], in animals<ref>{{RQ:Dunglison ML}}</ref>.
 
 ====Usage notes====
 * {{sense|article of clothing}} It was formerly common to speak of “skirts” (plural) rather than “a skirt”. In some cases this served to emphasize an array of skirts of underskirts, or of pleats and folds in a single skirt; in other cases it made little or no difference in meaning.
@@ -382,6 +381,10 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * German: {{t+check|de|säumen}}
 * Serbo-Croatian: {{t+check|sh|omeđiti}}, {{t-check|sh|ići duž}}
 {{trans-bottom}}
+
+===References===
+<references/>
+* {{R:Webster 1913}}
 
 ===Anagrams===
 * {{anagrams|en|a=ikrst|Kirst|stirk}}
