added missing <references/> <push#64796783>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -410,6 +410,7 @@ Probably {{etyl|fr|en}} {{m|fr|poche}}. See {{m|en|pouch}}.
 #*:a '''Push''' rise upon his Nose
 
 ===References===
+<references/>
 * {{R:Century 1911}}
 * {{R:OneLook}}
 
