--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -736,7 +736,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #* {{RQ:Beaumont Fletcher Comedies and Tragedies|The Two Noble Kinsmen|3|4|folio=2nd|part=2|436|column=2|He's buy me a whit '''Cut''', forth for to ride}}
 # {{lb|en|slang|dated}} The failure of a [[college]] [[officer]] or [[student]] to be present at any appointed exercise.
 # A [[skein]] of [[yarn]].
-#: {{rfquotek|en|Wright}}
+#* {{quote-text|en|1632|work=North Riding Record|passage=Two women for stealing 30 '''cuttes''' of linen yarn.}}
 # {{lb|en|slang|uncountable}} That which is used to [[dilute]] or [[adulterate]] a recreational drug.
 #: {{syn|en|[[mix#Noun|mix]]}}
 #: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
