/* Translations */ Romanian gender <branch#64821724>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -240,7 +240,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 {{trans-mid}}
 * Polish: {{t+|pl|rozgałęzienie|n}}
 * Portuguese: {{t+|pt|ramo|m}}, {{t+|pt|broto|m}}
-* Romanian: {{t+|ro|ramificare}}
+* Romanian: {{t+|ro|ramificare|f}}
 * Russian: {{t+|ru|ответвле́ние|n}}, {{t+|ru|ве́тка|f}}
 * Scots: {{t|sco|brainch}}
 * Scottish Gaelic: {{t|gd|meur|f}}
