t+mnc:[[ᡶᡝᡳᠰᡝ]] ([[WT:EDIT|Assisted]]) <brick#64836411>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -181,6 +181,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 * Malagasy: {{t+|mg|biriky}}
 * Malay: {{t|ms|batu bata}}
 * Malayalam: {{t+|ml|ഇഷ്ടിക}}
+* Manchu: {{t|mnc|ᡶᡝᡳᠰᡝ}}
 * Maori: {{t|mi|pereki}}
 * Marathi: {{t|mr|वीट|f}}
 * Mari: {{t|chm|кермыч}}
