t+gld:[[пэйдэ]] ([[WT:EDIT|Assisted]]) <brick#64837732>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -189,6 +189,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 * Mingrelian: {{t|xmf|ანგურა}}
 * Mongolian: {{t+|mn|тоосго|sc=Cyrl}}, {{t+|mn|туйпуу}}
 * Montagnais: {{t|moe|miku-ashini}}
+* Nanai: {{t|gld|пэйдэ}}
 * Nepali: {{t|ne|इँट्टा}}
 * Newar: {{t|new|अपा}}
 * Norman: {{t|nrf|brique|f}}
