t+kmr:[[axaftin]] t+cu:[[говорити]] t+cu:[[ⰳⱁⰲⱁⱃⰻⱅⰹ]] t-balance t+orv:[[говорити]] ([[WT:EDIT|Assisted]]) <speak#64885530>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -206,6 +206,8 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Khmer: {{t+|km|និយាយ}}, {{t+|km|ក្លាវ}}
 * Korean: {{t+|ko|말하다}}, {{t+|ko|말씀하다}} {{qualifier|honorific}}, {{t+|ko|이야기하다}}
 * Kumyk: {{t|kum|сёйлемек}}, {{t|kum|лакъыр этмек}}
+* Kurdish:
+*: Northern Kurdish: {{t+|kmr|axaftin}}
 * Kyrgyz: {{t|ky|сүйлө-}}
 * Ladin: {{t|lld|rujné}}
 * Ladino: {{t|lad|avlar}}, {{t|lad|favlar}}
@@ -220,8 +222,8 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Macedonian: {{t+|mk|зборува|impf}}, {{t|mk|говори|impf}}
 * Malay: {{t+|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക}}
-{{trans-mid}}
 * Maltese: {{t|mt|tkellem}}
+{{trans-mid}}
 * Manchu: {{t|mnc|ᡤᡳᠰᡠᡵᡝᠮᠪᡳ}}
 * Marathi: {{t+|mr|बोलणे}}
 * Meänkieli: {{t|fit|praatata}}
@@ -230,6 +232,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Mirandese: {{t|mwl|falar}}
 * Mongolian:
 *: Cyrillic: {{t+|mn|ярих}}, {{t+|mn|хэлэх}}
+*: Glagolitic: {{t|cu|ⰳⱁⰲⱁⱃⰻⱅⰹ|impf}}
 * Moroccan Amazigh: {{t|zgh|ⵙⴰⵡⵍ}}, {{t|zgh|ⵙⵙⵉⵡⵍ}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
@@ -244,6 +247,9 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 *: Bokmål: {{t+|nb|snakke}}, {{t+|nb|preke}}
 * Occitan: {{t+|oc|parlar}}
 * Ojibwe: {{t|oj|giigido}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|говорити|impf}}
+* Old East Slavic: {{t|orv|говорити|impf}}
 * Old English: {{t|ang|sprecan}}, {{t|ang|specan}}
 * Old Occitan: {{t|pro|parlar}}
 * Old Portuguese: {{t|roa-opt|falar}}
