/* English */ add and fix <catch#64888957>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -96,7 +96,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 See combined section below.
 
 ====Descendants====
-* {{desc|es|cachar|bor=1}}
+* {{desc|fr|catch|bor=1}}
 
 ====Translations====
 {{trans-top|the act of catching a ball}}
@@ -595,6 +595,9 @@ See combined section below.
 |crowd catch
 |make someone hard to catch
 }}
+
+====Descendants====
+* {{desc|es|cachar|bor=1}}
 
 ===References===
 <references />
