/* Descendants */ combine <catch#64889232>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -96,7 +96,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 See combined section below.
 
 ====Descendants====
-* {{desc|fr|catch|bor=1}}
+See combined section below.
 
 ====Translations====
 {{trans-top|the act of catching a ball}}
