/* Derived terms */ +[[skort]] <skirt#64919756>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -90,6 +90,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 |skirts and kidneys
 |skirt steak
 |skirty
+|skort
 |sprayskirt
 |underskirt
 |unskirted
